<resources>
    <string name="app_name">ProjectSpeedforce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Sesión de Entrenamiento</string>
    <string name="title_activity_login">Iniciar Sesion</string>

    <string name="asset_description">Speedforce Asset</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Front/Login/Register Strings -->
    <string name="front_button_login_string">INICIAR</string>
    <string name="front_button_register_string">REGISTRARSE</string>

    <string name="login_textview_title_string">Iniciar Sesión</string>
    <string name="login_textview_username_string">Nombre de Usuario</string>
    <string name="login_textview_password_string">Contraseña</string>
    <string name="login_button_signin_string">INICIAR SESIÓN</string>
    <string name="login_textview_create_account_string">¿No tienes una cuenta?, Regístrate</string>

    <string name="register_textview_email_string">Email</string>
    <string name="register_textview_confirm_password_string">Confirmar Contraseña</string>
    <string name="register_button_next_string">SIGUIENTE</string>
    <string name="register_button_signup_string">REGISTRARSE</string>
    <string name="register_textview_name_string">Nombre</string>
    <string name="register_textview_lastname_string">Apellido</string>
    <string name="register_textview_birthdate_string">Fecha de Nacimiento</string>
    <string name="register_textview_weight_string">Peso (lb)</string>
    <string name="register_textview_height_string">Altura (m)</string>
    <string name="register_textview_telephone_string">Número de Teléfono</string>
    <string name="register_textview_country_string">País</string>
    <string name="register_textview_city_string">Ciudad</string>
    <string name="register_textview_gender_string">Sexo</string>
    <string name="register_radiobutton_masculine_string">M</string>
    <string name="register_radiobutton_femenine_string">F</string>
    <string name="register_textview_bikertype_string">Tipo de Ciclista</string>
    <string name="register_textview_bike_string">Bicicleta</string>
    <string name="register_textview_title_string">Crear Cuenta</string>
    <string-array name="register_spinner_country_stringarray">
        <item>República Dominicana</item>
        <item>México</item>
        <item>Ecuador</item>
    </string-array>
    <string-array name="register_spinner_bikertype_stringarray">
        <item>Sprinter</item>
        <item>Maratonista</item>
        <item>Mountain Biker</item>
    </string-array>

    <!-- Google Maps Activities Strings -->
    <string name="default_info_title">Maps: Default Info Title</string>
    <string name="default_info_snippet">Maps: Default Information Snippet</string>
    <string name="maps_button_start_string">EMPEZAR</string>
    <string name="maps_button_stop_string">TERMINAR</string>
    <string name="maps_dialog_trainingtype_title_string">Seleccione Tipo de Entrenamiento</string>
    <string-array name="maps_dialog_trainingtype_items_stringarray">
        <item>Distancia</item>
        <item>Resistencia</item>
        <item>Velocidad</item>
    </string-array>
    <string name="maps_textview_intended_route_question_string">¿Es ésta su ruta?</string>
    <string name="maps_button_yes_string">Sí</string>
    <string name="maps_button_no_string">No</string>
    <string name="maps_button_accept_string">Aceptar</string>
    <string name="maps_button_cancel_string">Cancelar</string>
    <string name="maps_dialog_routename_title_string">Introduzca Nombre de Ruta</string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Results Activity Strings -->
    <string name="results_textview_title_string">Resultados</string>
    <string name="results_textview_trainingtype_string">Tipo de Entrenamiento:</string>
    <string name="results_textview_distance_string">Distancia Recorrida:</string>
    <string name="results_textview_duration_string">Duración:</string>
    <string name="results_textview_averagebpm_string">Latidos Por Minuto:</string>
    <string name="results_textview_burntcalories_string">Calorías Quemadas:</string>
    <string name="results_textview_climatecondition_string">Condición Climática:</string>
    <string name="results_textview_temperature_string">Temperatura:</string>
    <string name="results_button_accept_string">ACEPTAR</string>
    <string name="results_textview_unavailable_string">N/A</string>

    <!-- Hamburger Menu Item Strings -->
    <string name="menu_item_main_map_string">Entrenamiento</string>
    <string name="menu_item_training_string">Sesiones Recibidas</string>
    <string name="menu_item_history_string">Historial</string>
    <string name="menu_item_test_string">Test</string>
    <string name="menu_item_logout_string">Logout</string>

    <!-- Other Strings -->
    <string name="title_activity_received_maps">Sesión de Entrenamiento</string>


</resources>
