<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_map_id"
            android:icon="@drawable/img_location_icon"
            android:title="@string/menu_item_main_map_string" />
        <item
            android:id="@+id/nav_training_id"
            android:icon="@drawable/img_download_icon"
            android:title="@string/menu_item_training_string" />
        <item
            android:id="@+id/nav_history_id"
            android:icon="@drawable/img_history_icon"
            android:title="@string/menu_item_history_string" />
        <item
            android:id="@+id/nav_logout_id"
            android:icon="@drawable/img_power_icon"
            android:title="@string/menu_item_logout_string" />
    </group>
</menu>