<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/img_background_mobile_split"
    tools:context="com.georgewilliam.speedforce.projectspeedforce.RegisterActivity">

    <ScrollView
        android:id="@+id/register_scrollview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="top|center"
                android:textSize="@dimen/cast_intro_overlay_focus_radius"
                android:text="@string/register_textview_title_string" />-->

            <ImageView
                android:contentDescription="@string/asset_description"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_logo_blue_filled" />

            <TextView
                android:id="@+id/register_textview_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_name_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_name_string" />

            <EditText
                android:id="@+id/register_edittext_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/register_textview_lastname_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_lastname_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_lastname_string" />

            <EditText
                android:id="@+id/register_edittext_lastname_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/register_textview_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_email_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_email_string" />

            <EditText
                android:id="@+id/register_edittext_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:ems="15"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="textEmailAddress" />

            <!--<TextView
                android:id="@+id/register_textview_username_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_username_id"
                android:text="@string/login_textview_username_string" />

            <EditText
                android:id="@+id/register_edittext_username_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/register_textview_password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_password_id"
                android:text="@string/login_textview_password_string" />

            <EditText
                android:id="@+id/register_edittext_password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/register_textview_confirm_password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_confirm_password_id"
                android:text="@string/register_textview_confirm_password_string" />

            <EditText
                android:id="@+id/register_edittext_confirm_password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:inputType="textPassword" />-->

            <TextView
                android:id="@+id/register_textview_birthdate_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_birthdate_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_birthdate_string" />

            <EditText
                android:id="@+id/register_edittext_birthdate_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="15"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="date"
                android:focusable="false" />

            <TextView
                android:id="@+id/register_textview_gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_gender_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_gender_string" />

            <!--<EditText
                android:id="@+id/register_edittext_gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="text" />-->

            <RadioGroup
                android:id="@+id/register_radiogroup_gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/register_radiobutton_masculine_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/colorTextBlack"
                    android:text="@string/register_radiobutton_masculine_string" />

                <RadioButton
                    android:id="@+id/register_radiobutton_femenine_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/colorTextBlack"
                    android:text="@string/register_radiobutton_femenine_string"
                    android:checked="false" />

            </RadioGroup>

            <TextView
                android:id="@+id/register_textview_country_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_country_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_country_string" />

            <!--<EditText
                android:id="@+id/register_edittext_country_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="text" />-->

            <Spinner
                android:id="@+id/register_spinner_country_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:entries="@array/register_spinner_country_stringarray" />

            <TextView
                android:id="@+id/register_textview_city_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_city_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_city_string" />

            <EditText
                android:id="@+id/register_edittext_city_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="text" />

            <TextView
                android:id="@+id/register_textview_telephone_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_telephone_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_telephone_string" />

            <EditText
                android:id="@+id/register_edittext_telephone_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="phone" />

            <TextView
                android:id="@+id/register_textview_weight_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_weight_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_weight_string" />

            <EditText
                android:id="@+id/register_edittext_weight_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/register_textview_height_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_height_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_height_string" />

            <EditText
                android:id="@+id/register_edittext_height_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/register_textview_bikertype_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_bikertype_id"
                android:textColor="@color/colorTextBlack"
                android:text="@string/register_textview_bikertype_string" />

            <!--<EditText
                android:id="@+id/register_edittext_bikertype_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:backgroundTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"
                android:inputType="text" />-->

            <Spinner
                android:id="@+id/register_spinner_bikertype_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:entries="@array/register_spinner_bikertype_stringarray" />

            <!--<TextView
                android:id="@+id/register_textview_bike_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/register_edittext_bike_id"
                android:text="@string/register_textview_bike_string" />

            <EditText
                android:id="@+id/register_edittext_bike_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="text" />-->


            <Button
                android:id="@+id/register_button_next_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="34dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorSuccessBlue"
                android:textColor="@color/colorTextWhite"
                android:text="@string/register_button_next_string" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
