<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.georgewilliam.speedforce.projectspeedforce.LoginActivity">

    <TextView
        android:id="@+id/login_textview_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:labelFor="@+id/login_edittext_username_id"
        android:text="@string/login_textview_username_string" />

    <EditText
        android:id="@+id/login_edittext_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_textview_username_id"
        android:layout_alignBottom="@+id/login_textview_username_id"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/login_textview_username_id"
        android:ems="10"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_textview_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_textview_username_id"
        android:layout_below="@+id/login_edittext_username_id"
        android:layout_marginTop="47dp"
        android:labelFor="@+id/login_edittext_password_id"
        android:text="@string/login_textview_password_string" />

    <EditText
        android:id="@+id/login_edittext_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_textview_password_id"
        android:layout_alignBottom="@+id/login_textview_password_id"
        android:layout_alignStart="@+id/login_edittext_username_id"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button_signin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_edittext_password_id"
        android:layout_below="@+id/login_edittext_password_id"
        android:layout_marginTop="34dp"
        android:text="@string/login_button_signin_string" />

</RelativeLayout>
